# open-science-catalog-builder

./: .bumpversion.cfg  LICENSE  README.md  requirements.txt  setup.cfg
osc_builder/: __init__.py  build.py  cli.py  codelist.py  io.py  iso.py  metrics.py  mystac.py  origcsv.py  stac.py  types.py  types_.py  util.py
