[metadata]
name = osc_builder
author = Fabian Schindler
author_email = fabian.schindler@eox.at
description = Open Science Catalogue - Static Catalogue builder
version = attr: osc_builder.__version__
url = https://github.com/EOEPCA/open-science-catalog-builder
keywords =
  OSC
  Open Science Catalogue
  STAC
# classifiers =
#   Development Status :: 4 - Beta
#   Intended Audience :: Science/Research
#   Programming Language :: Python :: 3
#   Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  click==8.0.3
  grako==3.99.9
  lxml==4.8.0
  pygeoif==0.7
  pygeometa==0.11.1
  pystac==1.3.0
  python-dateutil==2.8.2
  python-slugify==6.0.1
  six==1.16.0
  text-unidecode==1.3

[options.entry_points]
console_scripts =
  osc = osc_builder.cli:cli

[mypy]
ignore_missing_imports = True
